# ThinkingInSimd

./: .gitignore  LICENSE  README.md  black_scholes.hpp  main.cpp  ubench.h  vec_black_scholes.hpp
algorithms/: CMakeLists.txt  README.md
algorithms/src/: avx_binary_search.cc  main.cpp
data_structures/: CMakeLists.txt  README.md
data_structures/src/: black_scholes.cc  constants.cc  data_structures.cc  main.cpp  vec_black_scholes.cc
hash/: CMakeLists.txt
hash/src/: fash.hh  main.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  main.cpp  vec_black_scholes.cc
src/cmake/: GoogleBenchmark.cmake  VectorClass.cmake
vcl/: vectormath_exp.h
